<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_dark"
    android:padding="8dp">

    <!-- Expression display (top, smaller text) -->
    <TextView
        android:id="@+id/tvExpression"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end|center_vertical"
        android:minHeight="48dp"
        android:paddingHorizontal="12dp"
        android:paddingTop="16dp"
        android:text=""
        android:textColor="@color/text_secondary"
        android:textSize="22sp"
        android:maxLines="2"
        android:ellipsize="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- Result display -->
    <TextView
        android:id="@+id/tvResult"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="end|center_vertical"
        android:minHeight="72dp"
        android:paddingHorizontal="12dp"
        android:paddingBottom="8dp"
        android:text="0"
        android:textColor="@color/text_primary"
        android:textSize="52sp"
        android:maxLines="1"
        android:ellipsize="start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvExpression" />

    <!-- Divider -->
    <View
        android:id="@+id/divider"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="@color/divider"
        android:layout_marginBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvResult" />

    <!-- Row 0: log, ln, DEL, C -->
    <Button
        android:id="@+id/btnLog"
        style="@style/CalcButton.Function"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:text="@string/btn_log"
        app:layout_constraintEnd_toStartOf="@id/btnLn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <Button
        android:id="@+id/btnLn"
        style="@style/CalcButton.Function"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:text="@string/btn_ln"
        app:layout_constraintEnd_toStartOf="@id/btnDelete"
        app:layout_constraintStart_toEndOf="@id/btnLog"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <Button
        android:id="@+id/btnDelete"
        style="@style/CalcButton.Function"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:text="@string/btn_delete"
        app:layout_constraintEnd_toStartOf="@id/btnClear"
        app:layout_constraintStart_toEndOf="@id/btnLn"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <Button
        android:id="@+id/btnClear"
        style="@style/CalcButton.Function"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:text="@string/btn_clear"
        android:textColor="@color/btn_clear_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnDelete"
        app:layout_constraintTop_toBottomOf="@id/divider" />

    <!-- Row 1: 7, 8, 9, ÷ -->
    <Button
        android:id="@+id/btn7"
        style="@style/CalcButton.Digit"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:text="7"
        app:layout_constraintEnd_toStartOf="@id/btn8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnLog" />

    <Button
        android:id="@+id/btn8"
        style="@style/CalcButton.Digit"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:text="8"
        app:layout_constraintEnd_toStartOf="@id/btn9"
        app:layout_constraintStart_toEndOf="@id/btn7"
        app:layout_constraintTop_toBottomOf="@id/btnLog" />

    <Button
        android:id="@+id/btn9"
        style="@style/CalcButton.Digit"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:text="9"
        app:layout_constraintEnd_toStartOf="@id/btnDiv"
        app:layout_constraintStart_toEndOf="@id/btn8"
        app:layout_constraintTop_toBottomOf="@id/btnLog" />

    <Button
        android:id="@+id/btnDiv"
        style="@style/CalcButton.Operator"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:text="@string/btn_div"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn9"
        app:layout_constraintTop_toBottomOf="@id/btnLog" />

    <!-- Row 2: 4, 5, 6, × -->
    <Button
        android:id="@+id/btn4"
        style="@style/CalcButton.Digit"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:text="4"
        app:layout_constraintEnd_toStartOf="@id/btn5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn7" />

    <Button
        android:id="@+id/btn5"
        style="@style/CalcButton.Digit"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:text="5"
        app:layout_constraintEnd_toStartOf="@id/btn6"
        app:layout_constraintStart_toEndOf="@id/btn4"
        app:layout_constraintTop_toBottomOf="@id/btn7" />

    <Button
        android:id="@+id/btn6"
        style="@style/CalcButton.Digit"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:text="6"
        app:layout_constraintEnd_toStartOf="@id/btnMul"
        app:layout_constraintStart_toEndOf="@id/btn5"
        app:layout_constraintTop_toBottomOf="@id/btn7" />

    <Button
        android:id="@+id/btnMul"
        style="@style/CalcButton.Operator"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:text="@string/btn_mul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn6"
        app:layout_constraintTop_toBottomOf="@id/btn7" />

    <!-- Row 3: 1, 2, 3, - -->
    <Button
        android:id="@+id/btn1"
        style="@style/CalcButton.Digit"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:text="1"
        app:layout_constraintEnd_toStartOf="@id/btn2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn4" />

    <Button
        android:id="@+id/btn2"
        style="@style/CalcButton.Digit"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:text="2"
        app:layout_constraintEnd_toStartOf="@id/btn3"
        app:layout_constraintStart_toEndOf="@id/btn1"
        app:layout_constraintTop_toBottomOf="@id/btn4" />

    <Button
        android:id="@+id/btn3"
        style="@style/CalcButton.Digit"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:text="3"
        app:layout_constraintEnd_toStartOf="@id/btnSub"
        app:layout_constraintStart_toEndOf="@id/btn2"
        app:layout_constraintTop_toBottomOf="@id/btn4" />

    <Button
        android:id="@+id/btnSub"
        style="@style/CalcButton.Operator"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:text="@string/btn_sub"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btn3"
        app:layout_constraintTop_toBottomOf="@id/btn4" />

    <!-- Row 4: 0, ., =, + -->
    <Button
        android:id="@+id/btn0"
        style="@style/CalcButton.Digit"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:text="0"
        app:layout_constraintEnd_toStartOf="@id/btnDot"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn1"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btnDot"
        style="@style/CalcButton.Digit"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:text="@string/btn_dot"
        app:layout_constraintEnd_toStartOf="@id/btnEquals"
        app:layout_constraintStart_toEndOf="@id/btn0"
        app:layout_constraintTop_toBottomOf="@id/btn1"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btnEquals"
        style="@style/CalcButton.Equals"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:text="@string/btn_equals"
        app:layout_constraintEnd_toStartOf="@id/btnAdd"
        app:layout_constraintStart_toEndOf="@id/btnDot"
        app:layout_constraintTop_toBottomOf="@id/btn1"
        app:layout_constraintBottom_toBottomOf="parent" />

    <Button
        android:id="@+id/btnAdd"
        style="@style/CalcButton.Operator"
        android:layout_width="0dp"
        android:layout_height="@dimen/btn_height"
        android:text="@string/btn_add"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnEquals"
        app:layout_constraintTop_toBottomOf="@id/btn1"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
